resources/public/css/style.css
:root {
  --color-light-aqua: #3af;
  --color-light-bittersweet: #f50;
  --color-light-bluejeans: #48f;
  --color-light-grass: #7b0;
  --color-light-mint: #0ed;
  --color-light-pink: #e06;
  --color-light-pinkrose: #c4f;
  --color-light-sunflower: #fc0;
  --color-light-lavander: #34f;
  --color-light-light: #f5f7fa;
  --color-light-medium: #ccd1d9;
  --color-light-dark: #656d78;

  --color-dark-aqua: #3af;
  --color-dark-bittersweet: #f50;
  --color-dark-bluejeans: #48f;
  --color-dark-grass: #7b0;
  --color-dark-mint: #0ed;
  --color-dark-pink: #e06;
  --color-dark-pinkrose: #c4f;
  --color-dark-sunflower: #fc0;
  --color-dark-lavander: #34f;
  --color-gray-light: #e6e9ed;
  --color-gray-medium: #aab2bd;
  --color-gray-dark: #333;

  --page-bg: #010409;
  --hover: rgba(100, 100, 100, 70%);
  --font: #999;
  --font-hl: #fefefe;
  --font-faded: #444;
  --guitar-bg: rgba(255, 255, 255, 6%);
  --guitar-nut: var(--hover);
  --guitar-headstock: #080808;
  --guitar-string: rgba(255, 255, 255, 5%);
  --guitar-shadow: #000;
  --guitar-fret: rgba(0, 0, 0, 15%);
  --guitar-fretboard-dot: rgba(0, 0, 0, 50%);
  --note-hl-0: var(--color-dark-aqua);
  --note-hl-1: var(--color-dark-pink);
  --note-hl-2: var(--color-dark-bittersweet);
  --note-hl-3: var(--color-dark-sunflower);
  --note-hl-4: var(--color-dark-mint);
  --note-hl-5: var(--color-dark-grass);
  --note-hl-6: var(--color-dark-pinkrose);
  --note-hl-7: var(--color-dark-lavander);
  --note-hl-8: var(--color-gray-dark);
  --guitar-string-width-xs: 1px;
  --guitar-string-width-s: 1.6px;
  --guitar-string-width-m: 1.9px;
  --guitar-string-width-l: 3px;
  --button-bg: rgba(255, 255, 255, 3%);
  --button-fg: rgba(255, 255, 255, 5%);
  --button-border: rgba(255, 255, 255, 15%);
}

/* tuned https://i.pinimg.com/originals/2e/9f/63/2e9f6323123859937b6ef88834db2adb.jpg */
.theme--light {
  --note-hl-0: var(--color-light-aqua);
  --note-hl-1: var(--color-light-pink);
  --note-hl-2: var(--color-light-bittersweet);
  --note-hl-3: var(--color-light-sunflower);
  --note-hl-4: var(--color-light-mint);
  --note-hl-5: var(--color-light-grass);
  --note-hl-6: var(--color-light-pinkrose);
  --note-hl-7: var(--color-light-lavander);
  --note-hl-8: var(--color-gray-dark);
}

body {
  color: var(--font);
  background-color: var(--page-bg);
}

.center-text {
  text-align: center;
}

.guess {
  cursor: pointer;
}

.guitar-container {
  width: 100%;
  overflow-x: auto;
}

.guitar {
  display: flex;
  flex-direction: column;
  box-shadow: 0px 5px 10px var(--guitar-shadow);
  background-color: var(--guitar-bg);
  overflow-x: auto;
  flex-wrap: nowrap;
  min-width: 35rem;
}

.guitar--faded {
  color: var(--font-faded);
}

.guitar-string {
  display: flex;
  user-select: none;
  position: relative;
}

.guitar-string:after {
  content: " ";
  position: absolute;
  left: 0;
  right: 0;
  pointer-events: none;
}
.guitar-string:nth-child(1):after {
  top: calc(50% - var(--guitar-string-width-xs));
  border-top: var(--guitar-string-width-xs) solid var(--guitar-string);
}
.guitar-string:nth-child(2):after {
  top: calc(50% - var(--guitar-string-width-s));
  border-top: var(--guitar-string-width-s) solid var(--guitar-string);
}
.guitar-string:nth-child(3):after,
.guitar-string:nth-child(4):after {
  top: calc(50% - var(--guitar-string-width-m));
  border-top: var(--guitar-string-width-m) solid var(--guitar-string);
}
.guitar-string:nth-child(5):after,
.guitar-string:nth-child(6):after {
  top: calc(50% - var(--guitar-string-width-l));
  border-top: var(--guitar-string-width-l) solid var(--guitar-string);
}

.guitar-string .guitar-nut {
  border-right: 0.3rem solid;
  border-color: var(--guitar-nut);
  background-color: var(--guitar-headstock);
  width: 60%;
}

.guitar-nut,
.guitar-fret {
  position: relative;
  display: flex;
  align-self: stretch;
  margin: 0 1px;
  height: 2rem;
  width: 100%;
  text-align: center;
  font-family: Helvetica;
  font-size: 0.7rem;
  font-weight: bold;
  text-transform: uppercase;
}

.guitar-fret {
  background-color: var(--guitar-fret);
  transition: all 0.1s;
}

.scale-note {
  position: relative;
  display: block;
  width: 100%;
  text-align: center;
  line-height: 2rem;
  cursor: pointer;
}

.guitar-fret:hover .scale-note:before {
  box-shadow: 0px 0px 3px var(--hover);
}
.guitar-fret:hover .scale-note:not(.scale-note--hl):before {
  background-color: var(--hover);
}

.scale-note--hl:before,
.scale-note--hl:after,
.guitar-fret:hover .scale-note:before,
.guitar-fret:hover .scale-note:after {
  content: " ";
  position: absolute;
  top: calc(50% - 0.78rem);
  right: calc(50% - 0.7rem);
  border-radius: 20rem;
  width: 1.4rem;
  height: 1.4rem;
}

.guitar-fret:active .scale-note:before,
.guitar-fret:active .scale-note:after {
  filter: brightness(75%);
}

.scale-note--hl:before {
  transition: all 0.1s;
  /* background-color from script */
}

.guitar-fret:hover .scale-note:after,
.scale-note--hl:after {
  content: attr(data-note);
  top: auto;
  right: calc(50% - 0.7rem);
  color: var(--font-hl);
}

.scale-note--hl-0:before {
  background-color: var(--note-hl-0);
}
.scale-note--hl-1:before {
  background-color: var(--note-hl-1);
}
.scale-note--hl-2:before {
  background-color: var(--note-hl-2);
}
.scale-note--hl-3:before {
  background-color: var(--note-hl-3);
}
.scale-note--hl-4:before {
  background-color: var(--note-hl-4);
}
.scale-note--hl-5:before {
  background-color: var(--note-hl-5);
}
.scale-note--hl-6:before {
  background-color: var(--note-hl-6);
}
.scale-note--hl-7:before {
  background-color: var(--note-hl-7);
}
.scale-note--hl-8:before {
  background-color: var(--note-hl-8);
}

.guitar-string:nth-child(3) .guitar-fret:nth-of-type(2n + 4):after,
.guitar-string:nth-child(2) .guitar-fret:nth-of-type(13):after,
.guitar-string:nth-child(4) .guitar-fret:nth-of-type(13):after,
.guitar-string:nth-child(2) .guitar-fret:nth-of-type(25):after,
.guitar-string:nth-child(4) .guitar-fret:nth-of-type(25):after {
  content: " ";
  background-color: var(--guitar-fretboard-dot);
  position: absolute;
  right: calc(50% - 0.5rem);
  bottom: -0.5rem;
  border-radius: 20rem;
  width: 1rem;
  height: 1rem;
}

.guitar-string:nth-child(3) .guitar-fret:nth-of-type(12):after,
.guitar-string:nth-child(3) .guitar-fret:nth-of-type(14):after,
.guitar-string:nth-child(3) .guitar-fret:nth-of-type(24):after {
  content: none;
}

.buttons {
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 0.4rem;
  margin: 1rem 0.4rem;
  /* justify-content: space-evenly; */
}

.button {
  background: transparent;
  background-color: var(--button-bg);
  outline: none;
  border-radius: 1rem;
  border: 1px transparent solid;
  color: var(--font-faded);
  cursor: pointer;
  font-size: 0.8rem;
  line-height: 1.5rem;
  min-width: 2.2rem;
  padding: 0.2rem 0.5rem;
  text-transform: capitalize;
  user-select: none;
  box-shadow: none;
  transition: all 0.1s;
}
.button--selected {
  background-color: var(--button-fg);
  border-color: var(--button-border);
}
.button--huge {
  font-size: 1rem;
  line-height: 2rem;
}
.button:hover,
.button:focus {
  box-shadow: 0px 0px 5px var(--hover);
}
.button:active {
  filter: brightness(85%);
}

/* buy me a coffee */
.bmc-btn-container {
  text-align: right;
  transition: transform;
  transform: scale(0.5);
  transform-origin: bottom right;
}

.bmc-btn-container .bmc-btn {
  margin-right: 1rem;
}

.bmc-btn-container .bmc-btn {
  transition: all 0.1s;
  filter: grayscale(100%);
  filter: brightness(20%);
}

.bmc-btn-container .bmc-btn:active,
.bmc-btn-container .bmc-btn:focus,
.bmc-btn-container .bmc-btn:hover {
  filter: grayscale(0%);
  filter: brightness(100%);
}

